# Django-book

./: README.md  pyproject.toml
myBookList/: .env.template  manage.py
myBookList/auth/: serializers.py  tests.py  urls.py  views.py
myBookList/book/: models.py  serializers.py  test_views.py  tests.py  urls.py  views.py
myBookList/book/migrations/: 0001_initial.py  0002_alter_book_isbn.py  0003_alter_book_isbn.py  0004_book_creator.py  0005_book_favourites.py
myBookList/myBookList/: asgi.py  settings.py  urls.py  wsgi.py
